<?xml version="1.0" encoding="utf-8"?>


<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="16dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="179dp"
        android:background="@color/background_card_color">

        <ImageView
            android:id="@+id/hotelLogo"
            android:layout_width="43dp"
            android:layout_height="38dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/hotel_logo"
            android:scaleType="fitXY"
            android:src="@drawable/ikos_aria"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.233" />

        <TextView
            android:id="@+id/hotelName"
            android:layout_width="298dp"
            android:layout_height="38dp"
            android:text="@string/ikos_aria"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/hotelLogo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.234" />

        <TextView
            android:id="@+id/hotelAddress"
            android:layout_width="341dp"
            android:layout_height="40dp"
            android:text="@string/suburban_road_kefalos_kos_greece_kefalos_85301_greece"
            android:textColor="@color/text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.313"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.589" />

        <TextView
            android:id="@+id/hotelPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_600"
            android:textColor="@color/text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.952"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.9" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>