<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp"
    app:cardCornerRadius="22dp"
    app:cardElevation="8dp"
    app:cardBackgroundColor="@color/background_card_color">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/star1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star_disabled"
                    app:tint="@color/button_color" />

                <ImageView
                    android:id="@+id/star2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star_disabled"
                    app:tint="@color/button_color" />

                <ImageView
                    android:id="@+id/star3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star_disabled"
                    app:tint="@color/button_color" />

                <ImageView
                    android:id="@+id/star4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star_disabled"
                    app:tint="@color/button_color" />

                <ImageView
                    android:id="@+id/star5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star_disabled"
                    app:tint="@color/button_color" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivHotel"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ikos_aria" />

                <TextView
                    android:id="@+id/tvHotelName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/ikos_aria"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/bookings_text"
                android:textColor="@color/text_color_light"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/suburban_road_kefalos_kos_greece_kefalos_85301_greece"
                android:textColor="@color/text_color_light"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/euro600"
                android:textColor="@color/text_color_light"
                android:textSize="16sp"
                android:textStyle="bold" />


            <Button
                android:id="@+id/btnVisitWebsite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/button_color"
                android:text="@string/visit_website"
                android:textColor="@color/button_text_color"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </FrameLayout>

</androidx.cardview.widget.CardView>