<?xml version="1.0" encoding="utf-8"?>


<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="179dp"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="16dp"
    app:cardBackgroundColor="@color/background_card_color"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/star1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star_disabled"
                app:tint="@color/button_color" />

            <ImageView
                android:id="@+id/star2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star_disabled"
                app:tint="@color/button_color" />

            <ImageView
                android:id="@+id/star3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star_disabled"
                app:tint="@color/button_color" />

            <ImageView
                android:id="@+id/star4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star_disabled"
                app:tint="@color/button_color" />

            <ImageView
                android:id="@+id/star5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star_disabled"
                app:tint="@color/button_color" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp">


            <ImageView
                android:id="@+id/hotelLogo"
                android:layout_width="43dp"
                android:layout_height="38dp"
                android:contentDescription="@string/hotel_logo"
                android:scaleType="centerCrop"
                android:src="@drawable/ikos_aria"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.233" />

            <TextView
                android:id="@+id/hotelName"
                android:layout_width="298dp"
                android:layout_height="38dp"
                android:layout_marginStart="10dp"
                android:text="@string/ikos_aria"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/hotelLogo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.234" />
        </LinearLayout>

        <TextView
            android:id="@+id/hotelAddress"
            android:layout_width="341dp"
            android:layout_height="40dp"
            android:layout_marginTop="5sp"
            android:text="@string/suburban_road_kefalos_kos_greece_kefalos_85301_greece"
            android:textColor="@color/text_color_light"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.313"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.589" />

        <TextView
            android:id="@+id/hotelPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:text="@string/_600"
            android:textAlignment="textEnd"
            android:textColor="@color/text_color_light"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.952"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.9" />

    </LinearLayout>

</androidx.cardview.widget.CardView>